@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Added a --no-cleanup option for the tidyall script that causes it to leave
+  any tempdirs it creates behind. Implemented by Mark Fowler. GitHub #41.
+
+
 0.29     2015-08-15
 
 - Replaced use of Digest::SHA1 with Digest::SHA. The latter module has been
